# LQR-_Self_balance_robot_using_ros2

./: CMakeLists.txt  README.md  package.xml
config/: bridge_config.yaml  controllers.yaml  effort_controllers.yaml
launch/: LQR.txt  display.launch.py  gazebo_control.launch.py  gazebo_effort_control.launch.py  gazebo_w_robot.launch.py  lqr_control.launch.py  lqr_ref_gui.launch.py
meshes/: body_link.STL  imu_link.STL  left_wheeL_link.STL  right_wheel_link.STL
scripts/: lqr_controller.py  lqr_ref_gui.py
urdf/: selfbalancerobot.csv  selfbalancerobot.urdf
worlds/: autorace_2020.world
